--- a/theora.opam
+++ b/theora.opam
@@ -4,7 +4,7 @@ version: "1.0.0"
 synopsis: "Bindings to libtheora"
 maintainer: ["The Savonet Team <savonet-users@lists.sourceforge.net>"]
 authors: ["The Savonet Team <savonet-users@lists.sourceforge.net>"]
-license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
+license: "LGPL-2.1-only"
 homepage: "https://github.com/savonet/ocaml-xiph"
 bug-reports: "https://github.com/savonet/ocaml-xiph/issues"
 depends: [
